Added readme file

--- a/README
+++ b/README
@@ -1,11 +1,30 @@
-To run mongoDb
-    1. Open cmd and type in 
-        a. mongo
-        b. mongod
+# Anime app
 
-To run server
-    1 . node backend/server
-    
-    
-To run Frontend
-    1. npm run start
+Anime app is a MERN stack application that renders a list of popular Animes. The application is in development phase.
+
+# Technology Stack
+
+The technology stack includes
+
+## Frontend
+
+1. ReactJS
+2. Redux for state management
+
+## Backend
+
+1. NodeJS
+2. MongoDb
+
+## Setup the application locally for development environment
+
+1. `npm i` in the root folder would install all the required dependencies required to run the project
+2. Make sure to have mongodb already setup on your local machine
+3. to run the backend: node `./backend/index.js`
+4. `npm run start` to run the development build
+
+## Run the production build
+
+To create a production build,
+
+1. `npm run build`
